# officeclaw.ai

./: .gitignore  CHANGELOG.md  Dockerfile  OPENCLAW_UPDATE_CHECKS.md  PicoClaw  README.md  SHIELD.md  SKILL.md  docker-compose.yml  flavor.json  package-lock.json  package.json
IronClaw/: README.md  setup.sh
IronClaw/tools-src/morpheus-status/: Cargo.toml  README.md
IronClaw/tools-src/morpheus-status/src/: lib.rs
IronClaw/tools-src/morpheus-status/wit/: world.wit
PicoClaw/: README.md
ZeroClaw/: README.md  config.patch.toml  setup.sh
ZeroClaw/tools-src/morpheus-status/: Cargo.toml
ZeroClaw/tools-src/morpheus-status/src/: main.rs
branding/: generate-logos.sh
docs/: index.html
everclaw-key-api/: package.json
memory/: 2026-03-18.md  2026-03-19-bootstrap-faucet.md  2026-03-19-ecosystem-sync.md  2026-03-20-0403.md  2026-03-20-0505.md
mission-control/: index.html
scripts/: .last-sync.json  agent-download-server.mjs  agent-download.mjs  bootstrap-client.mjs  bootstrap-everclaw.mjs  buddy-host.mjs  buddy-host.test.mjs  diagnose.sh  docker-entrypoint.sh  ecosystem-sync.sh  everclaw-deps.mjs  everclaw-wallet.mjs  install-with-deps.sh  install.sh  morpheus-proxy.mjs  morpheus-proxy.test.mjs  restore-agent.sh  setup-ollama.sh  setup.mjs  venice-402-watchdog.sh
templates/: everclaw-config-memory.json  openclaw-config-gateway-only.json  openclaw-config-linux.json  openclaw-config-mac.json
tests/: agent-download-integration.test.mjs  agent-download-security.test.mjs  agent-download-server.test.mjs  agent-download.test.mjs  lib-wallet-crypto.mjs  (+3 more)
(+156 files in other folders)
